[tool.poetry]
name = "qmon"
version = "0.1.0"
description = "Simple server monitor"
authors = ["Elijah Wilson <dev.tizz98@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.5"
django = "^3.1"
djangorestframework = "^3.11.1"
django-environ = "^0.4.5"
psycopg2-binary = "^2.8.5"
psutil = "^5.7.2"
django-extensions = "^3.0.5"
humanize = "^2.6.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
ipython = "^7.17.0"
ipdb = "^0.13.3"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
